# csv-async

./: .gitignore  Cargo.toml  LICENSE  README.md  codecov.yml
.github/workflows/: codecov.yml  linux.yml  macos.yml  test_linux.yml  windows.yml
src/: async_reader.rs  async_reader_builder.rs  async_reader_futures.rs  async_reader_tokio.rs  async_writer.rs  async_writer_builder.rs  async_writer_futures.rs  async_writer_tokio.rs  byte_record.rs  debug.rs  deserializer.rs  error.rs  lib.rs  serializer.rs  string_record.rs
src/async_readers/: ades_futures.rs  ades_tokio.rs  ardr_futures.rs  ardr_tokio.rs  mod.rs
src/async_writers/: aser_futures.rs  aser_tokio.rs  awtr_futures.rs  awtr_tokio.rs  mod.rs  mwtr_serde.rs
tests/: read_records.rs  read_serde.rs
tests/data/: cities_incomplete_row.csv  cities_non_int.csv  cities_ok.csv  cities_pl_win1250.csv  invalid_date_time.csv
tests/helpers/: helpers_async_std.rs  helpers_tokio.rs  mod.rs
