[package]
name = "csv-async"
version = "1.2.5"
authors = ["gwierzchowski <gwierzchowski@wp.pl>"]
description = "CSV parsing for async."
edition = "2021"
rust-version = "1.60"
keywords = ["csv", "comma", "parser", "async"]
categories = ["asynchronous", "encoding", "parser-implementations"]
repository = "https://github.com/gwierzchowski/csv-async"
license = "MIT"
readme = "README.md"
exclude = [".gitignore", ".github/**", "codecov.yml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# For tests
# default = ["with_serde", "tokio"]
# default = ["tokio"]

# This is default set
default = ["with_serde"]
with_serde = ["serde", "bstr/serde", "itoa", "ryu"]
tokio = ["tokio1", "tokio-stream"]

[dependencies]
bstr = "1"
cfg-if = "1"
csv-core = "0.1"
futures = "0.3"
itoa = { version = "1", optional = true }
ryu  = { version = "1", optional = true }
serde = { version = "1", optional = true }
tokio1 = { package = "tokio", version = "1.20", features = ["io-util", "fs"], optional = true }
tokio-stream = { version = "0.1", optional = true }

[dev-dependencies]
async-std = { version = "1", features = ["attributes"]}
indoc = "2"
serde = { version = "1", features = ["derive"] }
tokio1 = { package = "tokio", version = "1.20", features = ["rt", "rt-multi-thread", "macros"] }
